problemi con flag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ToDo List</title>
+
+    <!-- Vue -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css" />
@@ -33,27 +36,23 @@
             type="text"
             id="todo-input"
             placeholder="Inserire una cosa da fare"
+            v-model="newTask.task"
+            @keyup.enter="addTask"
           />
-          <button>Invia</button>
+          <button @click="addTask">Invia</button>
         </div>
         <div class="list-container">
           <ul>
-            <li class="">
-              fare spesa
+            <li class="" v-for="(item, index) in tasks">
+              {{ item.task }}
               <div>
-                <span class="check"><i class="fa-solid fa-check"></i></span
+                <span class="check" @click="doneTask"
+                  ><i class="fa-solid fa-check"></i></span
                 ><span class="cancel"
                   ><i class="fa-solid fa-trash-can"></i
                 ></span>
               </div>
             </li>
-            <li>fare es</li>
-            <li>andare in palestra</li>
-            <li>comprare regalo</li>
-            <li>fare spesa</li>
-            <li>fare es</li>
-            <li>andare in palestra</li>
-            <li>comprare regalo</li>
           </ul>
         </div>
       </div>
